# Latte

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Latte.sln  Makefile  README.md  a.out  main.cpp  premake5.lua  tasks.json
Game/src/: Makefile
Latte/: ApplicationEvent.h  Event.h  KeyEvent.h  Latte.vcxproj  Latte.vcxproj.filters  MouseEvent.h
Latte/src/: Latte.h  Test.cpp  Test.h
Latte/src/Latte/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  ltpch.h
Latte/src/Latte/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
RotatingTriangle/src/: linmath.h  main.c
RustExample/: Cargo.toml
RustExample/src/: lib.rs
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
TealWindow/src/: main.c
WithGlue/src/: with-glue.c
bin-int/Debug-x64/Latte/: vc141.idb
bin-int/Debug-x64/Latte/Latte.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Latte.lastbuildstate  Latte.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: vc141.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
